[package]
name = "learnRust"
version = "0.1.0"
authors = ["weiyinfu <wei.yinfu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
rand="0.3.14"
chrono = "0.4"
lazy_static = "1.4.0"
log = "0.4"
serde = "1.0.106"
serde_json = "1.0.52"
serde_derive = "1.0.106"
hyper = "0.13"
